; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_umem_odp.c_invalidate_page_trampoline.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_umem_odp.c_invalidate_page_trampoline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_umem = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ib_umem*, i64, i64)* }

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ib_umem*, i64, i64, i8*)* @invalidate_page_trampoline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @invalidate_page_trampoline(%struct.ib_umem* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca %struct.ib_umem*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store %struct.ib_umem* %0, %struct.ib_umem** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.ib_umem*, %struct.ib_umem** %5, align 8
  %10 = call i32 @ib_umem_notifier_start_account(%struct.ib_umem* %9)
  %11 = load %struct.ib_umem*, %struct.ib_umem** %5, align 8
  %12 = getelementptr inbounds %struct.ib_umem, %struct.ib_umem* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (%struct.ib_umem*, i64, i64)*, i32 (%struct.ib_umem*, i64, i64)** %14, align 8
  %16 = load %struct.ib_umem*, %struct.ib_umem** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* @PAGE_SIZE, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 %15(%struct.ib_umem* %16, i64 %17, i64 %20)
  %22 = load %struct.ib_umem*, %struct.ib_umem** %5, align 8
  %23 = call i32 @ib_umem_notifier_end_account(%struct.ib_umem* %22)
  ret i32 0
}

declare dso_local i32 @ib_umem_notifier_start_account(%struct.ib_umem*) #1

declare dso_local i32 @ib_umem_notifier_end_account(%struct.ib_umem*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
